--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,6 +26,7 @@ requirements:
     - pytorch-lightning >=1.3.0
     - pytorch >=1.6
     - torchmetrics >=0.4.1
+    - lightning-utilities
 
 test:
   imports:
