--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,10 +23,15 @@ requirements:
     - dataclasses
     - packaging
     - python >=3.6
-    - pytorch-lightning >=1.3.0
+    - pytorch-lightning >=1.7.0
     - pytorch >=1.6
     - torchmetrics >=0.4.1
     - lightning-utilities
+    - wandb
+    - pillow
+    - torchvision
+    - scikit-learn
+    - matplotlib-base
 
 test:
   imports:
