--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,20 +18,16 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.6
+    - python >=3.8
   run:
-    - dataclasses
     - packaging
-    - python >=3.6
-    - pytorch-lightning >=1.7.0
-    - pytorch >=1.6
-    - torchmetrics >=0.4.1
-    - lightning-utilities
-    - wandb
-    - pillow
-    - torchvision
-    - scikit-learn
-    - matplotlib-base
+    - python >=3.8
+    - numpy
+    - pytorch-lightning >=1.7.0, <2.0.0
+    - torchmetrics >=0.10.0, <0.12.0
+    - lightning-utilities >0.3.1
+    - tensorboard >=2.9.1, <2.14.0
+    - torchvision >=0.10.0
 
 test:
   imports:
